ajout connection http pour les data

--- a/src/RechercheService/appsettings.Development.json
+++ b/src/RechercheService/appsettings.Development.json
@@ -7,5 +7,6 @@
   },
   "ConnectionStrings": {
     "MongoDbConnection": "mongodb://root:mongopw@localhost"
-  }
+  },
+  "EnchereServiceUrl": "http://localhost:7001"
 }
