--- a/src/IdentityService/IdentityService.csproj
+++ b/src/IdentityService/IdentityService.csproj
@@ -9,12 +9,15 @@
 	<ItemGroup>
 		<PackageReference Include="Duende.IdentityServer.AspNetIdentity" Version="6.3.8" />
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="7.0.16" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.16">
+		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		  <PrivateAssets>all</PrivateAssets>
+		</PackageReference>
 		<PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.11" />
 		<PackageReference Include="Serilog.AspNetCore" Version="7.0.0" />
 
 		<PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="7.0.16" />
 		<PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.16" />
 		<PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="7.0.16" />
-		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.16" />
 	</ItemGroup>
 </Project>
