authentification dans la gateway

--- a/.gitignore
+++ b/.gitignore
@@ -478,3 +478,4 @@ $RECYCLE.BIN/
 .vscode/extensions.json
 .vscode/launch.json
 .vscode/tasks.json
+src/IdentityService/keys/is-signing-key-08826AB48AF0B16683EA27BA345B0676.json
