--- a/src/GatewayService/appsettings.Development.json
+++ b/src/GatewayService/appsettings.Development.json
@@ -5,12 +5,27 @@
       "Microsoft.AspNetCore": "Information"
     }
   },
+  "IdentityServiceUrl": "http://localhost:5000",
   "ReverseProxy": {
     "Routes": {
-      "encheres" : {
+      "encheresRead": {
         "ClusterId": "encheres",
         "Match": {
-          "Path": "/encheres/{**catch-all}"
+          "Path": "/encheres/{**catch-all}",
+          "Methods": ["GET"]
+        },
+        "Transforms": [
+          {
+            "PathPattern": "api/encheres/{**catch-all}"
+          }
+        ]
+      },
+      "encheresWrite": {
+        "ClusterId": "encheres",
+        "AuthorizationPolicy": "default",
+        "Match": {
+          "Path": "/encheres/{**catch-all}",
+          "Methods": ["POST", "PUT", "DELETE"]
         },
         "Transforms": [
           {
