--- a/src/GatewayService/appsettings.Development.json
+++ b/src/GatewayService/appsettings.Development.json
@@ -33,7 +33,7 @@
           }
         ]
       },
-      "search": {
+      "recherche": {
         "ClusterId": "recherche",
         "Match": {
           "Path": "/recherche/{**catch-all}",
