--- a/src/RechercheService/appsettings.Development.json
+++ b/src/RechercheService/appsettings.Development.json
@@ -8,5 +8,8 @@
   "ConnectionStrings": {
     "MongoDbConnection": "mongodb://root:mongopw@localhost"
   },
-  "EnchereServiceUrl": "http://localhost:7001"
+  "EnchereServiceUrl": "http://localhost:7001",
+  "RabbitMq": {
+    "Host": "localhost"
+  }
 }
